--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="class">Number 1 - I'm a class!</p>
     <div id="Id2">Number 2 - I'm one ID.</div>
     <p class="class cooler">Number 3 - I'm a class, but cooler!</p>
-    <div id="Id4">Number 4 - I'm another ID.</div>
+    <div id="Id4" class="cooler">Number 4 - I'm another ID.</div>
     <p class="class">Number 5 - I'm a class!</p>
   </body>
 </html>
